# portal

./: .env.deploy  .gitignore  .mcp.json  PRIVACY.md  README.md  composer.json  package-lock.json  package.json  vite.wasm.config.js
.github/workflows/: BUILD-ANDROID.md  README.md  build-android.yml  build-desktop.yml  build-ios.yml
app/Livewire/: Portal.php  PortalAbout.php  PortalApps.php  PortalHome.php
app/Providers/: AppServiceProvider.php
bootstrap/: app.php
config/: nb-ui-mobile.php
lang/: en.json  pt_BR.json
public/lang/: en.json
resources/css/: app.css
resources/js/: index.html  php-loader.js
resources/views/components/: portal-shell.blade.php
resources/views/components/layouts/: app.blade.php  auth.blade.php
resources/views/livewire/: portal-about.blade.php  portal-apps.blade.php  portal-home.blade.php  portal.blade.php
routes/: web.php
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: lib.rs  main.rs
