[package]
name = "nativeblade"
version = "0.1.0"
edition = "2021"
description = "Nativeblade"

[lib]
name = "nativeblade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nativeblade"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
nativeblade-tauri = { path = "../vendor/nativeblade/nativeblade/rust" }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Always-on plugins. NativeBlade core depends on them. Listed here as
# direct deps so tauri-build can discover their permissions.
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"

# Optional Tauri plugins. Each one is gated by a Cargo feature so it
# only ships in the binary when explicitly enabled via
# NativeBladeConfig::plugins([...]) in your AppServiceProvider.
#
# Run `php artisan nativeblade:config` to regenerate the [features]
# section below to match your declared plugins.
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-clipboard-manager = { version = "2", optional = true }
tauri-plugin-geolocation = { version = "2", optional = true }
tauri-plugin-haptics = { version = "2", optional = true }
tauri-plugin-http = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-upload = { version = "2", optional = true }

# Desktop-only always-on plugins. Compiled in on Windows/macOS/Linux,
# excluded on Android/iOS (where mobile-specific equivalents are used).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-notification = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = { version = "2", optional = true }
tauri-plugin-barcode-scanner = { version = "2", optional = true }
tauri-plugin-nfc = { version = "2", optional = true }
tauri-plugin-nativeblade-push = { path = "../vendor/nativeblade/nativeblade/rust/plugins/push", optional = true }
tauri-plugin-nativeblade-media = { path = "../vendor/nativeblade/nativeblade/rust/plugins/media", optional = true }

# nativeblade:plugins:start
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
barcode_scanner = ["dep:tauri-plugin-barcode-scanner"]
biometric = ["dep:tauri-plugin-biometric"]
clipboard = ["dep:tauri-plugin-clipboard-manager"]
deep_link = ["dep:tauri-plugin-deep-link"]
geolocation = ["dep:tauri-plugin-geolocation"]
haptics = ["dep:tauri-plugin-haptics"]
http = ["dep:tauri-plugin-http"]
media = ["dep:tauri-plugin-nativeblade-media"]
nfc = ["dep:tauri-plugin-nfc"]
push = ["dep:tauri-plugin-nativeblade-push"]
shell = ["dep:tauri-plugin-shell"]
upload = ["dep:tauri-plugin-upload"]
# nativeblade:plugins:end

[profile.release]
# Strip DWARF from the .so but keep the ELF symbol table (function names).
# AGP's `debugSymbolLevel` only operates on libs Gradle compiles itself (CMake/
# ndk-build) — it silently skips pre-built libs in `jniLibs/`, which is exactly
# how Tauri ships the Rust binary on Android. Without this `strip`, the .so
# ships with full debug info baked in (100MB+ per arch) and AGP doesn't extract
# anything. With `strip = "debuginfo"` the .so shrinks ~10× and crash reports
# still demangle to function names. The "missing native debug symbols" warning
# in Play Console is cosmetic at this point.
strip = "debuginfo"
debug = false
